Fix Color contrast

--- a/public/assets/scss/app.scss
+++ b/public/assets/scss/app.scss
@@ -434,7 +434,7 @@ MODULES
     padding-left: 20px;
     li{
       a{
-        color: #74818D;
+        color: #6b7782;
         &:hover{
           color: hsl(217.10000000000002, 100%, 42.7%);
           text-decoration: none;
@@ -521,7 +521,7 @@ MODULES
     }
     .footer__link {
       padding: 0 16px;
-      color: $blue;
+      color: #2e64bb;
       outline: none;
       white-space: nowrap;
       border-color: transparent;
